objects/GSO_Contract_Submission__c.object
<CustomObject>
    <fields>
        <fullName>Approver_Email__c</fullName>
        <label>Approver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <description>Used to get the Approver name in the Approval Notice email template</description>
        <formula>Approver__r.Name</formula>
        <label>Approver Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <label>Approver</label>
        <referenceTo>PSG_User__c</referenceTo>
        <relationshipLabel>GSO Contract Submissions (Approver)</relationshipLabel>
        <relationshipName>GSO_Contract_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contracts_Pending_Approval__c</fullName>
        <description>Contracts Pending Approval</description>
        <label>Contracts Pending Approval</label>
        <summaryFilterItems>
            <field>GSOContract__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </summaryFilterItems>
        <summaryForeignKey>GSOContract__c.GSO_Contract_Submission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contracts_Rejected__c</fullName>
        <description>Number of contracts rejected</description>
        <label>Contracts Rejected</label>
        <summaryFilterItems>
            <field>GSOContract__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryForeignKey>GSOContract__c.GSO_Contract_Submission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Market_Manager_Email__c</fullName>
        <description>Market Manager Email</description>
        <label>Market Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PSG_User__c</fullName>
        <description>PSG User</description>
        <label>PSG User</label>
        <referenceTo>PSG_User__c</referenceTo>
        <relationshipLabel>GSO Contract Submissions (PSG User)</relationshipLabel>
        <relationshipName>Re_Contract_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GSO Contract Submission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSG_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Submission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSO Contract Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>